--- a/src/assets/styles/02-generic/common.scss
+++ b/src/assets/styles/02-generic/common.scss
@@ -1,8 +1,8 @@
 html {
-  scroll-behavior: smooth;
-  scrollbar-gutter: stable;
+   scrollbar-gutter: stable;
+  overflow-y: scroll; // Always show scrollbar to prevent layout shift
 
-} 
+}  
 // using salla.document.onClick(...), become effective when all children are none pointer events.
 .cursor-pointer * {
   pointer-events: none;
